# musicbox

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: ci.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/dev/musicbox/musicbox/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/engine/: bindings.dart  engine.dart  types.dart
app/lib/models/: project.dart
app/lib/providers/: ai_provider.dart  engine_provider.dart  project_provider.dart  sequencer_provider.dart
app/lib/services/: ai_service.dart  export_service.dart  persistence_service.dart
app/lib/ui/ai/: ai_page.dart
app/lib/ui/effects/: effects_page.dart
app/lib/ui/pads/: pad_page.dart
app/lib/ui/sampler/: sampler_page.dart
app/lib/ui/sequencer/: sequencer_page.dart  step_grid.dart  transport_bar.dart
app/lib/ui/settings/: settings_page.dart
app/lib/ui/synth/: adsr_visualizer.dart  keyboard.dart  synth_page.dart
app/lib/ui/widgets/: step_button.dart
app/test/: widget_test.dart
engine/: Cargo.toml  build.rs
engine/src/: audio.rs  commands.rs  effects.rs  export.rs  lib.rs  recorder.rs  sampler.rs  sequencer.rs
engine/src/synth/: filter.rs  mod.rs  voice.rs  voice_pool.rs
scripts/: build_android.sh  build_ios.sh  run.sh
