[package]
name = "musicbox-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "musicbox_engine"
crate-type = ["cdylib", "staticlib"]

[dependencies]
cpal       = "0.15"
fundsp     = "0.18"
dasp       = { version = "0.11", features = ["signal", "interpolate"] }
rtrb       = "0.3"
hound      = "3.5"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
